<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register_Activity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:textAlignment="center">
    </TextView>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_reg_id"
            android:drawableLeft="@drawable/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Name"
            android:inputType="text"
            android:textAlignment="center"
            android:padding="12dp"
            android:layout_margin="18dp"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_reg_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center"
            android:padding="12dp"
            android:layout_margin="18dp">
        </com.google.android.material.textfield.TextInputEditText>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_reg_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableLeft="@drawable/save"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:padding="12dp"
            android:layout_margin="18dp">
        </com.google.android.material.textfield.TextInputEditText>
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_register_id">
    </Spinner>
    <Button
        android:id="@+id/signin_reg_id"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        >
    </Button>
    <TextView
        android:id="@+id/login_reg_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginRight="30dp"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        >
    </TextView>

</LinearLayout>