<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login_Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:textAlignment="center">
    </TextView>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email"
            android:textAlignment="center"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:layout_margin="18dp">
        </com.google.android.material.textfield.TextInputEditText>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableLeft="@drawable/save"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_margin="18dp">
        </com.google.android.material.textfield.TextInputEditText>
    </LinearLayout>
    <Button
        android:id="@+id/login_login_id"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        >
    </Button>
    <Spinner
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spin">
    </Spinner>
    <TextView
        android:id="@+id/register_login_id"
        android:layout_margin="15dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        >
    </TextView>
</LinearLayout>